# dodo-backup-manager

./: .gitignore  README.md  TODO.md  backup_manager.service.template  pyproject.toml  run.py
src/: get_backups_to_prune.py  run.py
src/config/: __init__.py  base.py  db.py
src/tests/: test_config.py  test_style.py
